# arduino-cmake-template-project

./: .gitignore  BoardOptions.cmake  CMakeLists.txt  Dependencies.cmake  GitVersionsLock.cmake  LICENSE  README.md  Version.cmake
cmake/utils/: ArduinoUtilities.cmake  _generated_version_tpl.h  generate_version.sh
src/: main.cpp
src/rtc/: DateTime.cpp  DateTime.h  Rtc.cpp  Rtc.h
src/sensors/: CurrentSensor.cpp  CurrentSensor.h
test/ctest/: CMakeLists.txt
